# machine-learning

./: .gitmodules  customer_segments.html
projects/boston_housing/: boston_housing.ipynb
projects/capstone/: README.md  benchmark.py  bib.bib  final_report.tex  proposal.tex
projects/capstone/game/: CMakeLists.txt  action.h  actionchoice.h  asteroid.cpp  asteroid.hpp  databaseconnection.cpp  databaseconnection.h  explosion.cpp  explosion.hpp  fake_renderer.hpp  fake_timer.hpp  framework.cpp  framework.hpp  game.cpp  game.hpp  humanplayer.cpp  humanplayer.h  player.cpp  player.hpp  randomplayer.cpp  randomplayer.h  rectangle.hpp  reinforcementlearningplayer.cpp  reinforcementlearningplayer.h  renderer.h  sdl_timer.hpp  sdlrenderer.cpp  sdlrenderer.h  shot.cpp  shot.hpp  spiel.cpp  sprite.cpp  sprite.hpp  state.cpp  state.h  states.h  texte.cpp  texte.hpp  timer.cpp  timer.hpp  (+1 more)
projects/capstone/game/GUI/: CMakeLists.txt  spiel.cpp
projects/capstone/game/ReinforcementLearningTesting/: CMakeLists.txt  testing.cpp
projects/capstone/game/ReinforcementLearningTraining/: CMakeLists.txt  training.cpp
projects/capstone/game/game_lib/: CMakeLists.txt  action.h  actionchoice.h  asteroid.hpp  databaseconnection.cpp  databaseconnection.h  environment.h  fake_renderer.hpp  fake_timer.hpp  game.cpp  game.hpp  gameevents.hpp  humanplayer.cpp  humanplayer.h  player.cpp  player.hpp  randomplayer.cpp  randomplayer.h  rectangle.hpp  reinforcementlearningplayer.cpp  reinforcementlearningplayer.h  renderer.h  sdl_timer.hpp  sdlrenderer.cpp  sdlrenderer.h  shot.cpp  shot.hpp  state.cpp  state.h  states.cpp  states.h  texte.cpp  timer.hpp
projects/customer_segments/: customer_segments.ipynb
projects/finding_donors/: census_train_labels.csv  finding_donors.ipynb  visuals.py
projects/finding_donors/kNNOptimizer/: CMakeLists.txt  censusdata.cc  censusdata.h  distancemetric.cc  distancemetric.h  evolutionaryalgorithm.cc  evolutionaryalgorithm.h  main.cc  read_census.h
projects/practice_projects/imdb/: IMDB_In_Keras.ipynb  IMDB_In_Keras_Solutions.ipynb  Student_Admissions.ipynb
projects/smartcab/: smartcab.html  smartcab.ipynb
projects/smartcab/logs/: sim_default-learning.csv  sim_default-learning.txt  sim_improved-learning.csv  sim_improved-learning.txt  sim_no-learning.csv
projects/smartcab/smartcab/: agent.py
